--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ loguru = "^0.7.2"
 python-dotenv = "^1.0.1"
 langchain-community = "^0.0.24"
 langchain-openai = "^0.0.8"
+sounddevice = "^0.4.6"
+numpy = "^1.26.4"
+scipy = "^1.12.0"
  
 [build-system]
 requires = ["poetry-core"]
@@ -23,3 +26,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 run-flask="src.app:main" #eq to poetry run python -m src.app   
+record="src.recordAudio:main"
